--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     runtimeOnly 'org.postgresql:postgresql'
+    implementation 'com.auth0:java-jwt:3.18.3'
 
     implementation "org.mapstruct:mapstruct:1.5.3.Final"
     annotationProcessor "org.mapstruct:mapstruct-processor:1.5.3.Final"
